<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/root">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currentTempText"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="@dimen/activity_vertical_margin"
        android:id="@+id/currTempText"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/ispisTemp"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currentHumidityText"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="@dimen/activity_vertical_margin"
        android:id="@+id/currHumText"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/ispisVlaz"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/prozor1"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/vrata1"
        android:layout_marginTop="15dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:id="@+id/ispisZeljTemp"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actionsText"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="@dimen/activity_vertical_margin"
        android:id="@+id/actionsText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Aktivnosti"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/root1">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings"
        android:text="@string/changeTempBtnText"
        android:layout_weight="1"
        android:textSize="@dimen/activity_vertical_margin"/>

     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/returnToMainActivityBtnText"
         android:id="@+id/returnBtn"
         android:layout_weight="1"
         android:textSize="@dimen/activity_vertical_margin"/>
    </LinearLayout>

</LinearLayout>
